frontend and backend managed by same webscript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
-    // "jsx": "react",
+    "jsx": "react",
     "declaration": true,
     "experimentalDecorators": true,
     "sourceMap": true,
