--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "lerna": "lerna bootstrap --hoist",
     "install": "npm run lerna",
     "start": "babel-node --presets es2015 tools/webpack.run watch",
-    "start:client": "lerna run --scope sample-browser-server start  --stream",
-    "start:server": "lerna run --scope sample-apollo-server start  --stream",
-    "watch": "npm run build:packages:watch",
+    "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
     "build": "npm run build:packages",
     "build:packages": "lerna run build --ignore *server",
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
@@ -49,8 +47,8 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "settings": {
-    "backendBuildDir": "packages/sample-server/dist",
-    "frontendBuildDir": "packages/sample-browser-server/dist",
+    "backendBuildDir": "servers/backend-server/dist",
+    "frontendBuildDir": "servers/frontend-server/dist",
     "graphQLUrl": "http://localhost:8080/graphql",
     "webpackDevPort": 3000,
     "apiPort": 8080,
@@ -110,8 +108,9 @@
     "istanbul": "1.0.0-alpha.2",
     "jest": "^20.0.3",
     "jest-cli": "^20.0.3",
+    "jest-mock-knex": "^1.4.2",
     "json-loader": "^0.5.4",
-    "lerna": "2.0.0-rc.4",
+    "lerna": "2.0.0-rc.5",
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
     "mkdirp": "^0.5.1",
@@ -137,6 +136,7 @@
     "style-loader": "^0.17.0",
     "ts-jest": "^20.0.4",
     "ts-loader": "^2.0.3",
+    "ts-node": "^3.0.4",
     "tslint": "^5.2.0",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.3.2",
@@ -169,6 +169,7 @@
     "inversify": "^4.1.0",
     "knex": "^0.13.0",
     "morgan": "^1.8.1",
+    "node-pre-gyp": "~0.6.31",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-apollo": "^1.2.0",
@@ -187,6 +188,7 @@
     "reflect-metadata": "^0.1.10",
     "reselect": "^3.0.0",
     "rxjs": "^5.4.0",
+    "sqlite3": "^3.1.8",
     "styled-components": "^2.0.0",
     "subscriptions-transport-ws": "^0.6.0"
   }
