--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -19,7 +19,22 @@
     "build:lib": "webpack",
     "build:lib:watch": "npm run build:lib -- --watch"
   },
-
+  "jest": {
+    "testEnvironment": "node",
+    "roots": [
+      "src",
+      "lib"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*test*\\.(ts|tsx|js)$"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/js-accounts/accounts/tree/master/packages/server"
@@ -27,6 +42,7 @@
   "author": "CDMBase LLC",
   "license": "MIT",
   "dependencies": {
+    "@sample/server-core": "*",
     "cdm-logger": "^0.3.2",
     "graphql-tools": "0.11.0",
     "lodash": "^4.17.4"
@@ -35,6 +51,8 @@
     "jest": "^20.0.3",
     "eslint": "^3.19.0",
     "eslint-plugin-graphql": "^0.8.0",
+    "knex": "^0.13.0",
+    "ts-node": "^3.0.4",
     "graphql": "^0.9.2",
     "rimraf": "^2.6.1",
     "webpack": "^2.5.1"
