added jest config

--- a/packages/sample-client-redux/package.json
+++ b/packages/sample-client-redux/package.json
@@ -33,7 +33,7 @@
     "transform": {
       "\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
+    "testRegex": "/__tests__/.*test*\\.(ts|tsx|js)$"
   },
   "repository": {
     "type": "git",
