--- a/packages/sample-core/package.json
+++ b/packages/sample-core/package.json
@@ -18,6 +18,21 @@
   "publishConfig": {
     "access": "public"
   },
+  "jest": {
+    "testEnvironment": "node",
+    "roots": [
+      "src"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*test*\\.(ts|tsx|js)$"
+  },
   "author": "CDMBase LLC",
   "license": "ISC",
   "devDependencies": {
