--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "apolloLogging": true
   },
   "devDependencies": {
+    "@types/async": "^2.0.40",
     "@types/body-parser": "1.16.3",
+    "@types/bunyan": "^1.8.0",
     "@types/cors": "2.8.1",
     "@types/enzyme": "^2.8.0",
     "@types/express": "^4.0.35",
@@ -70,7 +72,7 @@
     "@types/jest": "^19.2.3",
     "@types/knex": "0.0.50",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^7.0.12",
+    "@types/node": "^8.0.0",
     "@types/prop-types": "^15.5.1",
     "@types/react": "^15.0.24",
     "@types/react-addons-test-utils": "^0.14.18",
@@ -83,7 +85,7 @@
     "@types/webpack-env": "^1.13.0",
     "apollo-codegen": "^0.10.13",
     "apollo-logger": "0.0.4",
-    "awesome-typescript-loader": "^3.1.3",
+    "awesome-typescript-loader": "^3.2.1",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
@@ -116,8 +118,7 @@
     "mkdirp": "^0.5.1",
     "nock": "^9.0.11",
     "node-dev": "^3.1.3",
-    "nodemon": "^1.11.0",
-    "npm-check-updates": "^2.10.5",
+    "npm-check-updates": "^2.12.1",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.5.1",
     "react-redux-typescript": "^2.3.0",
@@ -138,7 +139,7 @@
     "ts-node": "^3.1.0",
     "tslint": "^5.4.3",
     "tslint-loader": "^3.5.3",
-    "typescript": "^2.4.1",
+    "typescript": "2.3.4",
     "typescript-require": "^0.2.9-1",
     "wait-on": "^2.0.2",
     "webpack": "^2.5.1",
@@ -152,18 +153,18 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
-    "apollo-client": "^1.2.2",
+    "@cdm-logger/server": "^3.0.1",
+    "apollo-client": "^1.7.0",
     "bunyan": "^1.8.10",
-    "cdm-logger": "^0.3.2",
     "classnames": "^2.2.5",
     "cors": "^2.8.3",
     "export-dir": "^0.1.2",
     "express": "^4.15.2",
     "graphql": "^0.9.2",
-    "graphql-server-express": "^0.7.1",
-    "graphql-subscriptions": "^0.3.1",
-    "graphql-tag": "^2.0.0",
-    "graphql-tools": "0.11.0",
+    "graphql-server-express": "^1.0.0",
+    "graphql-subscriptions": "^0.4.3",
+    "graphql-tag": "^2.4.2",
+    "graphql-tools": "1.1.0",
     "helmet": "^3.6.0",
     "inversify": "^4.1.0",
     "knex": "^0.13.0",
@@ -171,9 +172,9 @@
     "node-pre-gyp": "~0.6.31",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-apollo": "^1.2.0",
+    "react-apollo": "^1.4.2",
     "react-dom": "^15.5.4",
-    "react-redux": "^5.0.3",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "reactstrap": "^4.6.2",
