--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -42,21 +42,20 @@
   "license": "MIT",
   "dependencies": {
     "@sample/server-core": "*",
-    "graphql-tools": "0.11.0",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
     "jest": "^20.0.3",
-    "knex": "^0.13.0",
-    "graphql": "^0.9.2",
     "rimraf": "^2.6.1",
     "webpack": "^2.5.1"
   },
   "peerDependencies": {
+    "graphql-tools": "1.0.0",
     "graphql": "^0.9.0 || ^0.10.0",
-    "graphql-subscriptions": "^0.3.1"
+    "graphql-subscriptions": "^0.3.1 || ^0.4.0"
   },
   "optionalDependencies": {
+    "knex": "^0.13.0",
     "@types/graphql": "^0.9.2"
   },
   "typings": "lib/index.d.ts",
