--- a/packages/sample-graphql-schema/tsconfig.json
+++ b/packages/sample-graphql-schema/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./src",
+    "rootDirs": ["./src", "../../../tools/logger.ts"],
     "outDir": "./lib",
     "typeRoots": [
       "../../node_modules/@types/"
