--- a/servers/backend-server/tsconfig.json
+++ b/servers/backend-server/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "declaration": false,
+    "rootDirs": ["./src", "../../../tools/logger.ts"],
     "outDir": "./dist",
     "typeRoots": [
       "../../node_modules/@types/"
@@ -13,6 +14,8 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "lib",
+    "dist",
+    "webpack.config.js"
   ]
 }
