fixed graphql-subscription type errors

--- a/servers/frontend-server/tsconfig.json
+++ b/servers/frontend-server/tsconfig.json
@@ -10,6 +10,9 @@
       "../../node_modules/@types"
     ]
   },
+  "files": [
+    "typings/index.d.ts"
+  ],
   "exclude": [
     "node_modules",
     "lib",
