--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -51,8 +51,7 @@
   },
   "peerDependencies": {
     "graphql-tools": "1.0.0",
-    "graphql": "^0.9.0 || ^0.10.0",
-    "graphql-subscriptions": "^0.3.1 || ^0.4.0"
+    "graphql": "^0.9.0 || ^0.10.0"
   },
   "optionalDependencies": {
     "knex": "^0.13.0",
