--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
     "@types/sinon": "^2.2.1",
     "@types/webpack": "^2.2.15",
     "@types/webpack-env": "^1.13.0",
-    "apollo-codegen": "^0.10.13",
-    "apollo-logger": "0.0.4",
+    "apollo-codegen": "^0.13.2",
     "awesome-typescript-loader": "^3.2.1",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
@@ -123,6 +122,7 @@
     "ts-node": "^3.1.0",
     "tslint": "^5.4.3",
     "tslint-loader": "^3.5.3",
+    "tslint-react": "^3.0.0",
     "typescript": "2.3.4",
     "typescript-require": "^0.2.9-1",
     "wait-on": "^2.0.2",
@@ -139,6 +139,7 @@
   "dependencies": {
     "@cdm-logger/server": "^3.0.1",
     "apollo-client": "^1.7.0",
+    "apollo-logger": "0.0.5",
     "bunyan": "^1.8.10",
     "classnames": "^2.2.5",
     "cors": "^2.8.3",
@@ -150,6 +151,7 @@
     "graphql-tag": "^2.4.2",
     "graphql-tools": "1.1.0",
     "helmet": "^3.6.0",
+    "immutability-helper": "^2.2.2",
     "inversify": "^4.1.0",
     "knex": "^0.13.0",
     "morgan": "^1.8.1",
