--- a/packages/sample-graphql-client/package.json
+++ b/packages/sample-graphql-client/package.json
@@ -13,7 +13,10 @@
     "build": "npm run build:clean && npm run build:lib",
     "build:clean": "rimraf lib",
     "build:lib": "webpack",
-    "build:lib:watch": "npm run build:lib -- --watch"
+    "build:lib:watch": "npm run build:lib -- --watch",
+    "schema:download": "./node_modules/.bin/apollo-codegen download-schema http://localhost:8080/graphql --output schema.json",
+    "schema:generate": "./node_modules/.bin/apollo-codegen generate src/**/*.graphql --schema schema.json --target typescript --output src/schema.ts",
+    "persistgraphql": "persistgraphql client/src/graphql/ --add_typename"
   },
   "publishConfig": {
     "access": "public"
@@ -36,6 +39,7 @@
   "author": "CDMBase LLC",
   "license": "ISC",
   "devDependencies": {
+    "apollo-codegen": "^0.13.2",
     "jest": "^20.0.3",
     "rimraf": "^2.6.1",
     "webpack": "^2.5.1"
