--- a/packages/sample-server-core/package.json
+++ b/packages/sample-server-core/package.json
@@ -45,6 +45,7 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
+    "@sample/utils": "*",
     "jest": "^20.0.3",
     "rimraf": "^2.6.1",
     "webpack": "^2.5.1"
