--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "export-dir": "^0.1.2",
     "express": "^4.15.2",
     "graphql": "^0.10.3",
+    "graphql-server-core": "^1.0.2",
     "graphql-server-express": "^1.0.0",
     "graphql-subscriptions": "^0.4.3",
     "graphql-tag": "^2.4.2",
