--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "dotenv": "^4.0.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-plugin-graphql": "^0.8.0",
@@ -101,6 +102,7 @@
     "mkdirp": "^0.5.1",
     "nock": "^9.0.11",
     "node-dev": "^3.1.3",
+    "nodemon": "^1.12.0",
     "npm-check-updates": "^2.12.1",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.5.1",
@@ -152,10 +154,15 @@
     "graphql-tag": "^2.4.2",
     "graphql-tools": "1.1.0",
     "helmet": "^3.6.0",
+    "hemera-joi": "^1.2.2",
+    "hemera-plugin": "0.0.12",
+    "hemera-testsuite": "^1.2.0",
     "immutability-helper": "^2.2.2",
     "inversify": "^4.1.0",
     "knex": "^0.13.0",
     "morgan": "^1.8.1",
+    "nats": "^0.7.20",
+    "nats-hemera": "^1.5.11",
     "nconf": "^0.8.4",
     "node-pre-gyp": "~0.6.31",
     "prop-types": "^15.5.8",
