--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "0.0.3",
+  "version": "0.0.4",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -24,17 +24,19 @@
     "check-updates": "lerna exec ./node_modules/.bin/npm-check-updates -- -u"
   },
   "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
     "testEnvironment": "node",
-    "testRegex": ".*\\.spec\\.ts$",
+    "roots": [
+      "src"
+    ],
     "moduleFileExtensions": [
       "ts",
-      "js",
-      "json"
-    ]
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*test*\\.(ts|tsx|js)$"
   },
   "repository": {
     "type": "git",
@@ -48,61 +50,60 @@
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
     "@types/async": "^2.0.40",
-    "@types/body-parser": "1.16.3",
+    "@types/body-parser": "1.16.5",
     "@types/bunyan": "^1.8.0",
     "@types/cors": "2.8.1",
     "@types/enzyme": "^2.8.0",
     "@types/express": "^4.0.35",
-    "@types/graphql": "^0.9.3",
     "@types/isomorphic-fetch": "0.0.34",
-    "@types/jest": "^19.2.3",
-    "@types/knex": "0.0.50",
+    "@types/jest": "^20.0.8",
+    "@types/knex": "0.0.61",
     "@types/minimist": "^1.2.0",
     "@types/node": "^8.0.0",
     "@types/prop-types": "^15.5.1",
-    "@types/react": "^15.0.24",
+    "@types/react": "^16.0.5",
     "@types/react-addons-test-utils": "^0.14.18",
     "@types/react-dom": "^15.5.0",
-    "@types/react-redux": "^4.4.40",
-    "@types/recompose": "^0.22.0",
+    "@types/react-redux": "^5.0.8",
+    "@types/recompose": "^0.24.1",
     "@types/semver": "^5.3.31",
     "@types/sinon": "^2.2.1",
-    "@types/webpack": "^2.2.15",
+    "@types/webpack": "^3.0.10",
     "@types/webpack-env": "^1.13.0",
-    "apollo-codegen": "^0.13.2",
+    "apollo-codegen": "^0.16.5",
+    "apollo-test-utils": "^0.3.2",
     "awesome-typescript-loader": "^3.2.1",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.1",
-    "babel-loader": "^6.4.1",
+    "babel-eslint": "^8.0.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
-    "cdm-webpack-node-externals": "^1.5.6",
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "dotenv": "^4.0.0",
     "enzyme": "^2.8.2",
-    "eslint": "^3.19.0",
-    "eslint-plugin-graphql": "^0.8.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "eslint": "^4.6.1",
+    "eslint-plugin-graphql": "^1.3.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
-    "graphql-code-generator": "^0.5.4",
+    "graphql-code-generator": "^0.8.10",
     "html-webpack-plugin": "^2.28.0",
     "istanbul": "1.0.0-alpha.2",
-    "jest": "^20.0.3",
-    "jest-cli": "^20.0.3",
+    "jest": "^21.1.0",
+    "jest-cli": "^21.1.0",
     "jest-mock-knex": "^1.4.2",
     "json-loader": "^0.5.4",
-    "lerna": "2.0.0",
+    "lerna": "2.1.2",
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
     "mkdirp": "^0.5.1",
     "nock": "^9.0.11",
     "node-dev": "^3.1.3",
-    "nodemon": "^1.12.0",
+    "nodemon": "^1.12.1",
     "npm-check-updates": "^2.12.1",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.5.1",
@@ -114,78 +115,79 @@
     "redux-mock-store": "^1.2.3",
     "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
-    "sinon": "^2.2.0",
+    "sinon": "^3.2.1",
     "sinon-as-promised": "^4.0.3",
+    "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
     "standard-version": "^4.0.0",
-    "style-loader": "^0.17.0",
-    "ts-jest": "^20.0.4",
+    "style-loader": "^0.18.2",
+    "ts-jest": "^21.0.1",
     "ts-loader": "^2.2.1",
     "ts-node": "^3.1.0",
     "tslint": "^5.4.3",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.0.0",
-    "typescript": "2.3.4",
+    "typescript": "2.5.2",
     "typescript-require": "^0.2.9-1",
     "wait-on": "^2.0.2",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-fail-plugin": "^1.0.6",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.8.2",
+    "webpack-fail-plugin": "^2.0.0",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0",
-    "webpack-sources": "^0.2.3",
+    "webpack-sources": "^1.0.1",
     "webpack-virtual-modules": "^0.1.5",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "@cdm-logger/server": "^3.0.1",
-    "apollo-client": "^1.7.0",
+    "apollo-client": "^1.9.2",
     "apollo-logger": "0.0.5",
     "bunyan": "^1.8.10",
     "classnames": "^2.2.5",
     "cors": "^2.8.3",
     "export-dir": "^0.1.2",
     "express": "^4.15.2",
-    "graphql": "^0.10.3",
-    "graphql-server-core": "^1.0.2",
-    "graphql-server-express": "^1.0.0",
-    "graphql-subscriptions": "^0.4.3",
+    "graphql": "^0.11.3",
+    "graphql-server-core": "^1.1.0",
+    "graphql-server-express": "^1.1.2",
+    "graphql-subscriptions": "^0.5.0",
     "graphql-tag": "^2.4.2",
-    "graphql-tools": "1.1.0",
+    "graphql-tools": "1.2.2",
     "helmet": "^3.6.0",
     "hemera-joi": "^1.2.2",
     "hemera-plugin": "0.0.12",
-    "hemera-testsuite": "^1.2.0",
+    "hemera-testsuite": "^1.3.0",
     "immutability-helper": "^2.2.2",
     "inversify": "^4.1.0",
     "knex": "^0.13.0",
     "morgan": "^1.8.1",
     "nats": "^0.7.20",
-    "nats-hemera": "^1.5.11",
+    "nats-hemera": "^1.5.13",
     "nconf": "^0.8.4",
     "node-pre-gyp": "~0.6.31",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-apollo": "^1.4.2",
+    "react-apollo": "^1.4.15",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "reactstrap": "^4.6.2",
-    "recompose": "^0.23.4",
+    "recompose": "^0.25.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-injectable-reducer": "^1.0.3",
     "redux-injectable-store": "^1.0.0",
-    "redux-loop": "^2.2.2",
+    "redux-loop": "^3.2.0",
     "redux-thunk": "^2.2.0",
     "reflect-metadata": "^0.1.10",
     "reselect": "^3.0.0",
     "rxjs": "^5.4.0",
-    "sequelize": "^4.3.1",
+    "sequelize": "^4.8.4",
     "sqlite3": "^3.1.8",
     "styled-components": "^2.0.0",
-    "subscriptions-transport-ws": "^0.7.3"
+    "subscriptions-transport-ws": "^0.8.3"
   }
 }
