--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -23,12 +23,11 @@
 	},
 	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
 	"devDependencies": {
-		"jest": "^20.0.3",
+		"jest": "^21.1.0",
 		"rimraf": "^2.6.1",
-		"source-map-loader": "^0.2.1",
-		"webpack": "^2.5.1",
-		"webpack-dev-server": "^2.4.5",
-		"webpack-fail-plugin": "^1.0.6",
+		"webpack": "^3.5.6",
+		"webpack-dev-server": "^2.8.2",
+		"webpack-fail-plugin": "^2.0.0",
 		"webpack-visualizer-plugin": "^0.1.11"
 	},
 	"dependencies": {
@@ -37,6 +36,7 @@
 		"@sample/client-redux": "*"
 	},
 	"peerDependencies": {
+		"source-map-loader": "*",
 		"apollo-client": "*",
 		"react": "*",
 		"react-apollo": "*",
