--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -14,12 +14,12 @@
     "author": "CDMBase LLC",
     "license": "ISC",
     "devDependencies": {
-        "jest": "^20.0.3",
+        "jest": "^21.1.0",
         "rimraf": "^2.6.1",
-        "nodemon": "^1.11.0",
-        "webpack": "^2.5.1"
+        "nodemon": "^1.12.1",
+        "webpack": "^3.5.6"
     },
-    "dependencies": {
-        "nats-hemera": "^1.5.11"
+    "optionalDependencies": {
+        "nats-hemera": ">1.5.0"
     }
 }
