--- a/packages/sample-server-core/package.json
+++ b/packages/sample-server-core/package.json
@@ -27,7 +27,8 @@
     "moduleFileExtensions": [
       "ts",
       "tsx",
-      "js"
+      "js",
+      "json"
     ],
     "transform": {
       "\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
