--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/express": "^4.0.35",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "^20.0.8",
+    "@types/graphql": "^0.10.2",
     "@types/knex": "0.0.61",
     "@types/minimist": "^1.2.0",
     "@types/node": "^8.0.0",
@@ -81,6 +82,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "body-parser": "^1.18.1",
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -149,7 +151,7 @@
     "cors": "^2.8.3",
     "export-dir": "^0.1.2",
     "express": "^4.15.2",
-    "graphql": "^0.11.3",
+    "graphql": "^0.10.5",
     "graphql-server-core": "^1.1.0",
     "graphql-server-express": "^1.1.2",
     "graphql-subscriptions": "^0.5.0",
