--- a/package.json
+++ b/package.json
@@ -55,11 +55,12 @@
     "@types/cors": "2.8.1",
     "@types/enzyme": "^2.8.0",
     "@types/express": "^4.0.35",
+    "@types/graphql": "^0.10.2",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "^20.0.8",
-    "@types/graphql": "^0.10.2",
     "@types/knex": "0.0.61",
     "@types/minimist": "^1.2.0",
+    "@types/nats-hemera": "^1.0.0",
     "@types/node": "^8.0.0",
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16.0.5",
@@ -85,6 +86,7 @@
     "body-parser": "^1.18.1",
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.0",
     "dotenv": "^4.0.0",
     "enzyme": "^2.8.2",
@@ -94,6 +96,7 @@
     "file-loader": "^0.11.1",
     "graphql-code-generator": "^0.8.10",
     "html-webpack-plugin": "^2.28.0",
+    "hemera-testsuite": "^1.4.1",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^21.1.0",
     "jest-cli": "^21.1.0",
@@ -151,6 +154,16 @@
     "cors": "^2.8.3",
     "export-dir": "^0.1.2",
     "express": "^4.15.2",
+    "fela": "^5.2.0",
+    "fela-beautifier": "^5.0.7",
+    "fela-font-renderer": "^5.0.8",
+    "fela-perf": "^5.0.2",
+    "fela-plugin-fallback-value": "^5.0.8",
+    "fela-plugin-logger": "^5.0.3",
+    "fela-plugin-lvha": "^5.0.7",
+    "fela-plugin-prefixer": "^5.0.8",
+    "fela-plugin-unit": "^5.0.7",
+    "fela-plugin-validator": "^5.0.7",
     "graphql": "^0.10.5",
     "graphql-server-core": "^1.1.0",
     "graphql-server-express": "^1.1.2",
