--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
     "graphql-code-generator": "^0.8.10",
-    "html-webpack-plugin": "^2.28.0",
     "hemera-testsuite": "^1.4.1",
+    "html-webpack-plugin": "^2.28.0",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^21.1.0",
     "jest-cli": "^21.1.0",
@@ -136,6 +136,7 @@
     "typescript-require": "^0.2.9-1",
     "wait-on": "^2.0.2",
     "webpack": "^3.5.6",
+    "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.8.2",
     "webpack-fail-plugin": "^2.0.0",
     "webpack-manifest-plugin": "^1.1.0",
