--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "fela-plugin-unit": "^5.0.7",
     "fela-plugin-validator": "^5.0.7",
     "graphql": "^0.10.5",
+    "graphql-nats-subscriptions": "^1.0.8",
     "graphql-server-core": "^1.1.0",
     "graphql-server-express": "^1.1.2",
     "graphql-subscriptions": "^0.5.0",
