--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "react": "^15.5.4",
     "react-apollo": "^1.4.15",
     "react-dom": "^15.5.4",
+    "react-fela": "^5.3.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
