added env for test

--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "jest": "./node_modules/.bin/jest",
-    "test": "jest",
+    "test": "cross-env ENV_FILE=../../config/test/test.env jest",
     "test:debug": "npm test -- --runInBand",
     "test:watch": "npm test -- --watch",
     "prepublish": "npm run build",
@@ -46,6 +46,7 @@
     "@sample/store": "*"
   },
   "devDependencies": {
+    "cross-env": "^5.0.5",
     "@sample/utils": "*",
     "jest": "^21.1.0",
     "rimraf": "^2.6.1",
