--- a/packages/sample-server-core/package.json
+++ b/packages/sample-server-core/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
-    "test": "jest",
+    "test": "cross-env ENV_FILE=../../config/test/test.env jest",
     "test:debug": "npm test -- --runInBand",
     "test:watch": "npm test -- --watch",
     "prepublish": "npm run build",
@@ -45,6 +45,7 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
+    "cross-env": "^5.0.5",
     "@sample/utils": "*",
     "jest": "^21.1.0",
     "rimraf": "^2.6.1",
