fix uglify issue

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "lerna clean",
     "start": "babel-node --presets es2015 tools/webpack.run watch",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
+    "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
     "build": "npm run build:packages",
     "build:packages": "lerna run build --ignore *server",
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
@@ -74,13 +75,14 @@
     "@types/webpack-env": "^1.13.0",
     "apollo-codegen": "^0.16.5",
     "apollo-test-utils": "^0.3.2",
-    "awesome-typescript-loader": "^3.2.1",
+    "awesome-typescript-loader": "^3.2.3",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "body-parser": "^1.18.1",
@@ -134,8 +136,9 @@
     "tslint-react": "^3.0.0",
     "typescript": "2.5.2",
     "typescript-require": "^0.2.9-1",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
     "wait-on": "^2.0.2",
-    "webpack": "^3.5.6",
+    "webpack": "^3.7.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.8.2",
     "webpack-fail-plugin": "^2.0.0",
@@ -147,14 +150,15 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
-    "@cdm-logger/server": "^3.0.1",
+    "@cdm-logger/server": "^3.0.2",
     "apollo-client": "^1.9.2",
-    "apollo-logger": "0.0.5",
+    "apollo-link": "^0.7.0",
+    "apollo-logger": "^0.1.0",
     "bunyan": "^1.8.10",
     "classnames": "^2.2.5",
     "cors": "^2.8.3",
     "export-dir": "^0.1.2",
-    "express": "^4.15.2",
+    "express": "^4.16.2",
     "fela": "^5.2.0",
     "fela-beautifier": "^5.0.7",
     "fela-font-renderer": "^5.0.8",
@@ -178,6 +182,7 @@
     "hemera-testsuite": "^1.3.0",
     "immutability-helper": "^2.2.2",
     "inversify": "^4.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "knex": "^0.13.0",
     "morgan": "^1.8.1",
     "nats": "^0.7.20",
