--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -1,66 +1,6 @@
 {
-  "name": "apollo-server",
-  "version": "0.0.1",
-  "description": "Starter kit for apollo server using webpack and typescript",
-  "main": "dist/main.js",
-  "private": true,
-  "scripts": {
-    "prepublish": "npm run build:clean",
-    "build:clean": "rimraf dist",
-    "test": "jest",
-    "test:watch": "npm test -- --watch",
-    "test:notify": "npm run test:watch -- --notify",
-    "start": "npm run build && node dist/main.js",
-    "start:watch": "concurrently \"npm run build:watch\" \"node-dev dist/main.js\"",
-    "preupver": "npm test",
-    "upver": "standard-version",
-    "db:migrate": "../../node_modules/.bin/knex migrate:latest --cwd ../../ --knexfile ./knexfile.ts",
-    "db:migrate:rollback": "../../node_modules/.bin/knex migrate:rollback  --cwd ../../ --knexfile ./knexfile.ts",
-    "db:seed": "npm run db:migrate && ../../node_modules/.bin/knex seed:run  --cwd ../../ --knexfile ./knexfile.ts"
-  },
-  "keywords": [
-    "apollo",
-    "backend",
-    "apollo-server",
-    "typescript",
-    "webpack",
-    "graphql",
-    "graphiql",
-    "express"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cdmbase/fullstack-pro.git"
-  },
-  "author": "CDMBase LLC",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cdmbase/fullstack-pro/issues"
-  },
-  "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
-  "dependencies": {
-    "@sample/schema": "*",
-    "@sample/server-core": "*",
-    "@sample/store": "*"
-  },
-  "peerDependencies": {
-    "subscriptions-transport-ws": "*",
-    "body-parser": "*",
-    "cors": "*",
-    "knex": "*",
-    "express": "*",
-    "concurrently": "*",
-    "helmet": "*",
-    "morgan": "*"
-  },
-  "devDependencies": {
-    "@sample/utils": "*",
-    "jest": "^21.1.0",
-    "rimraf": "^2.6.1",
-    "webpack": "^3.5.6"
-  },
-  "typings": "dist/main.d.ts",
-  "typescript": {
-    "definition": "dist/main.d.ts"
-  }
+	"dependencies": {
+		"@cdm-logger/server": "^3.0.2",
+		"apollo-logger": "^0.1.0"
+	}
 }
