--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -1,59 +1,5 @@
 {
-	"name": "frontend-server",
-	"version": "0.0.1",
-	"description": "Sample Client server",
-	"private": true,
-	"main": "index.js",
-	"scripts": {
-		"prepublish": "npm run build:clean",
-		"build:clean": "rimraf dist",
-		"jest": "./node_modules/.bin/jest",
-		"test": "jest",
-		"test:debug": "npm test -- --runInBand",
-		"test:watch": "npm test -- --watch"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/cdmbase/fullstack-pro.git"
-	},
-	"author": "CDMBase LLC",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/cdmbase/fullstack-pro/issues"
-	},
-	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
-	"devDependencies": {
-		"jest": "^21.1.0",
-		"rimraf": "^2.6.1",
-		"webpack": "^3.5.6",
-		"webpack-dev-server": "^2.8.2",
-		"webpack-fail-plugin": "^2.0.0",
-		"webpack-visualizer-plugin": "^0.1.11"
-	},
 	"dependencies": {
-		"@sample/client-core": "*",
-		"@sample/client-react": "*",
-		"@sample/client-redux": "*"
-	},
-	"peerDependencies": {
-		"source-map-loader": "*",
-		"apollo-client": "*",
-		"react": "*",
-		"react-apollo": "*",
-		"redux-thunk": "*",
-		"react-redux": "*",
-		"redux": "*",
-		"reselect": "*"
-	},
-	"jest": {
-		"moduleFileExtensions": [
-			"ts",
-			"tsx",
-			"js"
-		],
-		"transform": {
-			"\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
-		},
-		"testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
+		"express": "^4.16.2"
 	}
 }
